ODP-7038: harden Platform.<clinit> Cleaner reflection for JDK11 runtime
On JDK11, jdk.internal.ref is not exported to the unnamed module by
default, so Method.setAccessible() throws InaccessibleObjectException
inside Platform's static block, and spark-shell fails to start with:

  java.lang.ExceptionInInitializerError at ByteArrayMethods.<clinit>
  Caused by: InaccessibleObjectException: Unable to make ...
  jdk.internal.ref.Cleaner.create(Object, Runnable) accessible

Backport the SPARK-26839 graceful-degradation pattern from
upstream 2.4.x+/3.x:

  - Catch InaccessibleObjectException by name (avoids importing the
    JDK9+ class) when setAccessible() on DirectByteBuffer ctor/field
    fails; null both refs.
  - Probe createMethod by calling it with null args; if it throws
    IllegalAccessException, null the method ref.
  - allocateDirectBuffer() now checks for null CLEANER_CREATE_METHOD
    and falls back to ByteBuffer.allocateDirect(size), with a
    helpful OOM message pointing at -XX:MaxDirectMemorySize.

With this, spark-shell on JDK11 starts even without
`--add-opens java.base/jdk.internal.ref=ALL-UNNAMED`. Adding that
add-opens still gives you the bigger off-heap budget.